Add data file map

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <aside id="about" class="col-sm-4 order-md-1 text-white py-2 pl-3 bg-secondary overflow-auto">
                 <section>
-                    <button id="geolocate-ui">Sightings near me</button>
+                    <button id="geolocate-ui">View recent sitings near you</button>
                     <div class='mt-1' id="locateFeedback"></div>
                 </section>
             </aside>
@@ -80,29 +80,38 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.1/papaparse.min.js"
+    integrity="sha512-EbdJQSugx0nVWrtyK3JdQQ/03mS3Q1UiAhRtErbwl1YL/+e2hZdlIcSURxxh7WXHTzn83sjlh2rysACoJGfb6g=="
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.2/chroma.min.js"
+    integrity="sha512-8TVPS0EFkkmtT6yPb5K4csnSt3tjbKRrs0F8gvTNKv2OxOcwDO7+Klkz86gMVrzfqtZos5N2a+k+r9D+hlccmQ=="
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer">
+    </script>
     <script src="js/data.js"></script>
     <script src="js/script.js"></script>
     <script>
         createMap();
 
-        if (navigator.geolocation) {
+        /* if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function (x) {
                 console.log(x);
                 a.location.current = [x.coords.latitude, x.coords.longitude];
-               
-                console.log(a)
+
             }, function (y) {
-                console.log(y);
+    
             }, {
                 enableHighAccuracy: true,
                 maximumAge: 0,
             });
         } else {
             console.log("Geolocation is not supported by this browser.");
-        }
+        } */
 
-        getData();  
-        updateData();   
+       // getData();  
+      //  updateData();   
     </script>
 </body>
 
