--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="order-md-2 px-0">
                 <div id="guide col-12">
                     <h2>Guide title</h2>
-                    <div class="form-group mr-3 mt-3 col-lg-6"id="dropdown-ui">
+                    <div class="form-group mr-3 mt-3 col-lg-6" id="dropdown-ui">
                         <select class="form-control">
                             
                             <option value="rethaw" selected>Red Tailed Hawk</option>
@@ -96,7 +96,7 @@
     <script src="js/script.js"></script>
     <script>
         createMap();
-       
+        updateData();
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function (x) {
                 console.log(x);
