Add species data

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                             <option value="norhar2">Northern Harrier</option>
                             <option value="amekes">American Kestrel</option>
                             <option value="coohaw">Cooper's Hawk</option>
+                            <option value="perfal">Peregrine Falcon</option>
+                            <option value="reshaw">Red-shouldered Hawk</option>
+                            <option value="norgos">Northern Goshawk</option>
+                            <option value="merlin">Merlin</option>
+                            <option value="rolhaw">Rough-legged Hawk</option>
                             
                         </select>
                     </div>
