Add dynamic heading to guide

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </section>
 
                 <div class="form-group mr-3 mt-3 col-lg-6" id="dropdown-ui">
-                        <select class="form-control">
+                        <select class="form-select">
                             
                             <option value="rethaw" selected>Red Tailed Hawk</option>
                             <option value="norhar2">Northern Harrier</option>
@@ -59,6 +59,7 @@
                     <div id="bird-img">
 
                     </div>
+                    <h2 id="bird-name"></h2>
                     <p>Info about bird</p>
 
                 </section>
