--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div id="map"></div>
             </div>
             <aside id="about" class="col-sm-4 order-md-1 py-2 pl-3 overflow-auto">
-                <h1 class="text-white">Falcons and Hawks of Pennsylvania</h1>
+                <h1 class="text-white">Falcons and Hawks Observed in Pennsylvania</h1>
                 <section>
                     <button id="geolocate-ui">View recent observations near you</button>
                     <div class='mt-1' id="locateFeedback"></div>
