Add location function to dropdown

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <aside id="about" class="col-sm-4 order-md-1 py-2 pl-3 overflow-auto">
                 <h1 class="text-white">Falcons and Hawks Observed in Pennsylvania</h1>
                 <section>
-                    <button id="geolocate-ui">View recent observations near you</button>
+                    <!--<button id="geolocate-ui">View recent observations near you</button>-->
                     <div class='mt-1' id="locateFeedback"></div>
                 </section>
 
@@ -48,10 +48,9 @@
                             <option value="coohaw">Cooper's Hawk</option>
                             <option value="perfal">Peregrine Falcon</option>
                             <option value="reshaw">Red-shouldered Hawk</option>
-                            <option value="norgos">Northern Goshawk</option>
                             <option value="merlin">Merlin</option>
                             <option value="rolhaw">Rough-legged Hawk</option>
-                            
+                            <option value="obs">View all recent observations near you</option>
                         </select>
                     </div>
                 
