Update main map type

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <script src="js/script.js"></script>
     <script>
         createMap();
-        updateData();
+        //updateData();
 
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function (x) {
