Center county points

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
                 <ul class="list-unstyled">
                     <li>
                         Data source:
-                        <a href="https://science.ebird.org/en/pa/use-ebird-data">Ebird.org
-                            API</a>
+                        <a href="https://science.ebird.org/en/pa/use-ebird-data">Ebird.org</a>
                     </li>
                 </ul>
             </div>
