Add bird descriptions

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                     </div>
                     <h2 id="bird-name"></h2>
-                    <p>Info about bird</p>
+                    <div id="bird-des"></div>
 
                 </section>
                 
@@ -78,7 +78,7 @@
                         Data sources: Hawk and falcon observation data: <a href="https://science.ebird.org/en/pa/use-ebird-data" target="_blank">Ebird.org</a>; 
                      County boundaries: <a href="https://catalog.data.gov/dataset/tiger-line-shapefile-2016-state-pennsylvania-current-county-subdivision-state-based" target="_blank">US Census Bureau</a>
                     </li>
-                    <li>Map created by <a href="">Brittany Robertson</a> 12/20/2022</li>
+                    <li>Map created by <a href="https://btrobertson.github.io/" target="_blank">Brittany Robertson</a> 12/20/2022</li>
                 </ul>
             </div>
         </footer>
